spacing fixes

--- a/visconti/static/main.css
+++ b/visconti/static/main.css
@@ -19,7 +19,6 @@ h2, #main-board h1 {
     gap: 1.5rem;
     padding: 0 1rem;
     flex-grow: 1;
-    max-width: 70%;
 }
 #status-bar {
     display: flex;
